# RPTK

./: pyproject.toml  requirements.txt  rptk-run.py  rptk.py  run_rptk.py
example/: CRLM_example.py  run_rptk.py
mirp/: imageSUV.py
src/config/: InputDataStatistics.py  Transformation_config.py
src/feature_extraction/: Extractor.py  Outfile_checker.py  generate_radiomics_feature_map.py
src/feature_filtering/: Feature_formater.py  Radiomics_Filter_exe.py  ibsi_feature_formater.py
src/feature_selection/: FeatureSelector.py
src/image_processing/: Image_transformer.py  MR_Normalizer.py  Transform_Executer.py
src/model_training/: HyperparameterConfigurator.py  ModelTrainer.py  Optimizer.py  PerformancePlotter.py
src/segmentation_processing/: SegProcessor.py  Segmentation_perturbator.py
