[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rptk"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = []

# RPTK runs as source directory, not as installed package
# mirp and src are imported as top-level modules via sys.path
[tool.setuptools]
packages = ["rptk", "mirp", "src"]
package-dir = {"rptk" = "."}